--- a/css/main.sass
+++ b/css/main.sass
@@ -1,3 +1,7 @@
+$blue: #120b7b
+$lime: #5eff00
+$md: 800px
+
 @font-face
     font-family: "Aeroport"
     src: url("../fonts/AEROPORT-MEDIUM.TTF")
@@ -7,6 +11,7 @@
     src: url("../fonts/AEROPORTMONO.TTF")
 
 body, html
+    scroll-behavior: smooth !important
     width: 100% !important
     height: 100% !important
 
@@ -18,7 +23,7 @@ body
         padding: 10px 40px
         border: 3px solid #151515
         border-radius: 10px
-        background: #4a4a4a
+        background: #32dd2c
         transition: .1s color linear
         &:hover
             background-color: #32dd2c
@@ -38,12 +43,15 @@ body
 
 main.main
     width: 100%
-    height: 100vh
-    background: #6DAC2A
+    min-height: 100vh
+    background: $blue
     color: #f1f1f1
     margin: 0
     padding: 50px
+    display: flex
+    flex-direction: column
     nav
+        flex: 0 0 auto
         & *
             transition: 0.1s all linear
         ul
@@ -90,13 +98,25 @@ main.main
                     &:hover
                         &::after
                             opacity: 1
+        @media screen and ( max-width: $md )
+            & > ul
+                flex-direction: column
+                & > li
+                    margin: 15px 0
+                    width: 100%
+                    display: flex
+                    justify-content: center
+                    align-items: center
+
+    & > section
+        flex: 1 1 auto
 
     .contacts__media
         li
             margin: 0 10px
             font-size: 30px
             &:hover
-                color: #83c35e
+                color: $lime
                 transform: scale(1.24)
 
     h1
@@ -144,6 +164,19 @@ section.conditions
                 font-size: 24px
                 text-align: center
                 margin: 20px 0 0 0
+    @media screen and ( max-width: 1372px )
+        .conditions__container
+            flex-direction: column
+            .condition
+                width: 100%
+                margin: 20px 0
+                & > *
+                    font-size: 28px
+
+    @media screen and ( max-width: $md )
+        .condition
+            & > *
+                font-size: 20px
 
 section.advantages
     display: flex
@@ -153,7 +186,7 @@ section.advantages
     h2
         font-size: 40px
 
-    ul
+    & > ul
         list-style-type: none
         width: 100%
         display: flex
@@ -188,12 +221,12 @@ section.advantages
                 font-size: 21px
 
     .our-team-speech
-        padding: 150px 0 20px 0
         display: flex
         align-items: center
         li
             padding: 0 10px
             font-size: 16px
+            margin: 0 10px
 
             p
                 text-align: justify
@@ -213,6 +246,18 @@ section.advantages
     h6
         font-size: 22px
         text-align: center
+
+    @media screen and ( max-width: $md )
+        padding: 50px 70px 150px
+        & > ul
+            flex-direction: column
+            li
+                width: 100%
+                margin: 15px 0
+
+        .our-team-speech
+            li
+                margin: 10px 0
 
 section.catalog
     padding: 0px 50px 50px
@@ -249,33 +294,11 @@ section.catalog
         h4
             font-size: 18px
 
-section.clients
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    text-align: center
-    padding-top: 50px
-    h2
-        font-size: 50px
-
-    .swiper
-        width: 65%
-        height: 300px
-        &-slide
-            display: flex
-            justify-content: center
-            align-items: center
-        .client-img
-            img
-                height: 100px
-                width: auto
-
 section.free-export
     display: flex
     flex-direction: column
     align-items: center
-    padding: 100px 0 0 0
+    padding: 100px 50px
     background: #ececec
 
     h2
@@ -309,6 +332,8 @@ section.reviews
         background-color: #303030
         color: #f1f1f1
         width: 94%
+        border-radius: 20px
+        box-shadow: 8px -5px 8px 4px rgba(34, 60, 80, 0.2)
 
         &__text
             font-size: 17px
@@ -335,3 +360,36 @@ section.reviews
         &__author-name
             font-weight: bold
             display: block
+
+footer
+    background-color: $blue
+    color: #f1f1f1
+    text-align: center
+    display: flex
+    flex-direction: column
+    justify-content: center
+    padding: 50px
+    min-height: 400px
+
+    nav
+        padding: 30px 0 0 0
+        ul
+            list-style-type: none
+            margin: 0
+            padding: 0
+
+        a
+            text-decoration: none
+            color: inherit
+            transition: .07s all linear
+            &:hover
+                color: $lime
+
+        .contacts__media
+            font-size: 30px
+            display: flex
+            justify-content: center
+            li
+                margin: 0 10px
+                &:hover
+                    transform: scale(1.4)
